--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ QUEUE_DRIVER=sync
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
+MAIL_ADDRESS=shop@site.dev
+MAIL_NAME=Shop
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
