--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laracasts/flash": "~1.3",
         "laracasts/utilities": "~2.0",
         "anahkiasen/former": "4.0.*@dev",
-        "laravelcollective/html": "5.1.*"
+        "laravelcollective/html": "5.1.*",
+        "barryvdh/laravel-debugbar": "^2.0",
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -26,7 +28,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
